--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h2><a href="https://www.allrecipes.com/">Recipe list</a></h2>
     <h3>Top 5 Delicious & Easy Meals to Start With</h3>
     <ol>
-        <li><a href="bolognese.html">Spaghetti Bolognese</a></li><img src="images/spaghetti-bolognese-36.webp" alt="" height="400" width="400">
-        <li>Baked Lemon Chicken</li><img src="images/Baked-Lemon-Chicken-1-3.jpg" alt="" height="400" width="400">
-        <li>Chicken Quesadillas</li><img src="images/Chicken-Quesadilla-Square.jpg" alt="" height="400" width="400">
-        <li>Carbonara</li><img src="images/Carbonara_6a.webp" alt="" height="400" width="400">
-        <li>Chicken Stir Fry</li><img src="images/chicken-stir-fry-8.jpg" alt="" height="400" width="400">
+        <li><a href="bolognese.html">Spaghetti Bolognese</a></li><img src="./images/spaghetti-bolognese-36.webp" alt="" height="400" width="400">
+        <li>Baked Lemon Chicken</li><img src="./images/Baked-Lemon-Chicken-1-3.jpg" alt="" height="400" width="400">
+        <li>Chicken Quesadillas</li><img src="./images/Chicken-Quesadilla-Square.jpg" alt="" height="400" width="400">
+        <li>Carbonara</li><img src="./images/Carbonara_6a.webp" alt="" height="400" width="400">
+        <li>Chicken Stir Fry</li><img src="./images/chicken-stir-fry-8.jpg" alt="" height="400" width="400">
     </ol>
 </body>
 </html>
